--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
 
     {% include meta.html %} {% include fonts.html %}
 
+    <!-- MATH EQUATION -->
+    {% if page.use_math %} {% include mathjax_support.html %} {% endif %}
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
